# SNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
backup/v1/: Network.h
backup/v4/: Connection.cpp  Connection.h  Neuron.cpp
contrib/: CMakeLists.txt
script/: card_detect.py  card_detect_part.py  coin_detect.py  connect_pmb2.sh  dig.py  motor_cortex.py  spike_train.py
src/: Axon.h  Connection.cpp  Connection.h  Dendrite.h  Drawer.cpp  Drawer.h  Generator.cpp  Network.cpp  Network.h  Neuron.cpp  Neuron.h  NeuronGroup.cpp  NeuronGroup.h  Synapse.cpp  Synapse.h  Type.h  Utils.cpp  Utils.h  main.cpp  structs.h
src/v2/: Connection.cpp  Connection.h  Generator.h  Network.h  Neuron.h
src/v3/: Digestion.h  SNN.cpp  Type.h
v1/: Neuron.cpp  Synapse.h
