<?xml version="1.0"?>
<package format="2">
  <name>SNN</name>
  <version>0.1.0</version>
  <description>Spiking Neural Network</description>

  <maintainer email="kmpchk@gmail.com">kmpchk</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/kmpchk/SNN</url>

  <author email="kmpchk@gmail.com">kmpchk</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>

</package>
